<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:clipChildren="false"
    android:maxWidth="400dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clipChildren="false"
        android:gravity="center"
        android:minWidth="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clipChildren="false"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/s1"
                style="@style/LoginKeyboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="1"
                android:text="@string/key_1" />

            <TextView
                android:id="@+id/s2"
                style="@style/LoginKeyboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="2"
                android:text="@string/key_2" />

            <TextView
                android:id="@+id/s3"
                style="@style/LoginKeyboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="3"
                android:text="@string/key_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clipChildren="false"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/s4"
                style="@style/LoginKeyboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="4"
                android:text="@string/key_4" />

            <TextView
                android:id="@+id/s5"
                style="@style/LoginKeyboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="5"
                android:text="@string/key_5" />

            <TextView
                android:id="@+id/s6"
                style="@style/LoginKeyboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="6"
                android:text="@string/key_6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clipChildren="false"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/s7"
                style="@style/LoginKeyboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="7"
                android:text="@string/key_7" />

            <TextView
                android:id="@+id/s8"
                style="@style/LoginKeyboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="8"
                android:text="@string/key_8" />

            <TextView
                android:id="@+id/s9"
                style="@style/LoginKeyboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="9"
                android:text="@string/key_9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clipChildren="false"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fingerprint_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:scaleType="center"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_baseline_fingerprint" />

            <TextView
                android:id="@+id/s0"
                style="@style/LoginKeyboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="0"
                android:text="@string/key_0" />

            <ImageView
                android:id="@+id/backspace_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:scaleType="center"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_delete"
                app:tint="@color/black" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
